--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ru4ert",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ru4ert.com",
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
@@ -24,8 +25,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.1.6",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
