--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
-    "predeploy": "yarn run build",
     "public": "build",
+    "predeploy": "yarn run build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
       {
@@ -14,16 +14,20 @@
         ]
       },
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff|woff2|font.css)",
+        "source": "/static/**/*.*",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=0, s-maxage=31536000"
+            "value": "public, max-age=31536000"
           }
         ]
       }
     ],
     "rewrites": [
+      {
+        "source": "/sitemap.xml",
+        "destination": "/sitemap.xml"
+      },
       {
         "source": "**",
         "destination": "/index.html"
