--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "prepare": "husky install",
     "postinstall": "husky install"
   },
@@ -59,6 +59,7 @@
     "@types/styled-components": "^5.1.16",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "react-app-rewired": "^2.1.8"
   }
 }
