SEA page, Services page SEO optim

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Rupert Bogensperger",
-  "name": "Rupert Bogensperger | official website and developer profile",
+  "name": "Rupert Bogensperger | Full Stack Developer",
   "icons": [
     {
       "src": "/maskable_icon_x48.png",
