--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.6",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.16",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
