firebase hot reloading and typescript

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -83,6 +83,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#4eb30f",
+  "background_color": "#78909c"
 }
