--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "./functions/app/build",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "/sitemap.xml",
@@ -13,8 +14,6 @@
     ]
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\"/app run build",
-       "npm --prefix \"$RESOURCE_DIR\" run build"]
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\"/app run build", "npm --prefix \"$RESOURCE_DIR\" run build"]
   }
 }
