--- a/functions/app/public/manifest.json
+++ b/functions/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Rupert Bogensperger",
-  "name": "Rupert Bogensperger | Full Stack Developer",
+  "name": "Rupert Bogensperger | Full-Stack-Developer",
   "icons": [
     {
       "src": "/maskable_icon_x48.png",
@@ -9,37 +9,37 @@
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_72.png",
+      "src": "/maskable_icon_x72.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_96.png",
+      "src": "/maskable_icon_x96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_128.png",
+      "src": "/maskable_icon_x128.png",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_192.png",
+      "src": "/maskable_icon_x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_384.png",
+      "src": "/maskable_icon_x384.png",
       "sizes": "384x384",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_512.png",
+      "src": "/maskable_icon_x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -81,7 +81,7 @@
       "density": "4.0"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#4eb30f",
   "background_color": "#78909c"
