Safari Icon fix and SEO

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "*/setupTests.ts": true,
     "*/App.test.tsx": true,
     "*/reportWebVitals.ts": true
-  }
+  },
+  "svg.preview.background": "transparent"
 }
