--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,26 @@
   "hosting": {
     "public": "./functions/app/build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "headers": [
+      {
+        "source": "/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff|woff2|font.css)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=0, s-maxage=31536000"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "/sitemap.xml",
