--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
       {
-        "source": "/**",
+        "source": "/*",
         "headers": [
           {
             "key": "Cache-Control",
@@ -28,7 +28,7 @@
         "destination": "app/sitemap.xml"
       },
       {
-        "source": "**",
+        "source": "*",
         "function": "index"
       }
     ]
