--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -11,15 +11,16 @@
   },
   "plugins": ["@typescript-eslint", "import"],
   "rules": {
-    "import/no-unresolved": 0,
-    "no-unused-vars": 0,
-    "linebreak-style": ["error", "windows"],
-    "@typescript-eslint/no-unused-vars": 0,
-    "quote-props": ["error", "as-needed"],
-    "comma-spacing": 0,
     "@typescript-eslint/ban-ts-comment": 0,
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-unused-vars": 0,
+    "camelcase": "warn",
+    "comma-spacing": 0,
     "eqeqeq": "warn",
-    "semi": ["error", "never"],
-    "camelcase": "warn"
+    "import/no-unresolved": 0,
+    "linebreak-style": ["error", "windows"],
+    "no-unused-vars": 0,
+    "quote-props": ["error", "as-needed"],
+    "semi": ["error", "never"]
   }
 }
