fixed some bugs

--- a/functions/app/.env.production
+++ b/functions/app/.env.production
@@ -1,1 +1,3 @@
-PUBLIC_URL=https://ru4ert.com
+# keep disabled 
+# https://github.com/chrisvfritz/prerender-spa-plugin/issues/222#issuecomment-1004539149
+# PUBLIC_URL=https://ru4ert.com
