--- a/functions/app/.env.development
+++ b/functions/app/.env.development
@@ -1,1 +1,3 @@
-PUBLIC_URL=http://localhost:3000
+# keep disabled 
+# https://github.com/chrisvfritz/prerender-spa-plugin/issues/222#issuecomment-1004539149
+# PUBLIC_URL=http://localhost:3000
