--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,15 @@
         ]
       },
       {
+        "source": "/static/**/*.*",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000"
+          }
+        ]
+      },
+      {
         "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff|woff2|font.css)",
         "headers": [
           {
@@ -30,7 +39,7 @@
       },
       {
         "source": "**",
-        "function": "index"
+        "destination": "/index.html"
       }
     ]
   }
