--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/md5": "^2.3.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -59,6 +61,7 @@
     "@types/react-snapshot": "^1.3.0",
     "@types/styled-components": "^5.1.16",
     "lint-staged": "^12.1.2",
+    "prerender-spa-plugin": "^3.4.0",
     "react-app-rewired": "^2.1.8"
   }
 }
