--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -3,79 +3,79 @@
   "name": "Rupert Bogensperger | Full-Stack-Developer",
   "icons": [
     {
-      "src": "/maskable_icon_x48.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "48x48",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_x72.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_x96.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_x128.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_x192.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_x384.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "384x384",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/maskable_icon_x512.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc=g=16&d=mp&r=g",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/android-icon-36x36.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=36&d=mp&r=g",
       "sizes": "36x36",
       "type": "image/png",
       "density": "0.75"
     },
     {
-      "src": "/android-icon-48x48.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=48&d=mp&r=g",
       "sizes": "48x48",
       "type": "image/png",
       "density": "1.0"
     },
     {
-      "src": "/android-icon-72x72.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=72&d=mp&r=g",
       "sizes": "72x72",
       "type": "image/png",
       "density": "1.5"
     },
     {
-      "src": "/android-icon-96x96.png",
+      "src": "www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=96&d=mp&r=g",
       "sizes": "96x96",
       "type": "image/png",
       "density": "2.0"
     },
     {
-      "src": "/android-icon-144x144.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=144x&d=mp&r=g",
       "sizes": "144x144",
       "type": "image/png",
       "density": "3.0"
     },
     {
-      "src": "/android-icon-192x192.png",
+      "src": "https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=192x&d=mp&r=g",
       "sizes": "192x192",
       "type": "image/png",
       "density": "4.0"
