--- a/app/package.json
+++ b/app/package.json
@@ -7,25 +7,24 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "https://pkg.csb.dev/mui-org/material-ui/commit/1f395898/@mui/lab",
-    "@mui/material": "^5.2.2",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@mui/material": "^5.8.7",
+    "@mui/styled-engine-sc": "^5.8.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "md5": "^2.3.0",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.1.6",
-    "web-vitals": "^2.1.2"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -52,16 +51,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^28.1.4",
     "@types/md5": "^2.3.2",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-snapshot": "^1.3.0",
-    "@types/styled-components": "^5.1.16",
-    "lint-staged": "^12.1.2",
+    "@types/styled-components": "^5.1.25",
+    "lint-staged": "^13.0.3",
     "prerender-spa-plugin": "^3.4.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.2.1",
+    "typescript": "^4.7.4"
   }
 }
