--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,10 @@
 {
   "hosting": {
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "public": "./app/build",
     "predeploy": "yarn --cwd ./app build",
     "headers": [
